# club-poliglota

./: index.html  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.next/: app-build-manifest.json  trace
.next/server/: _error.js  edge-runtime-webpack.js  middleware-manifest.json  middleware.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/pages/: _error.js
.next/server/vendor-chunks/: @hookform.js  @radix-ui.js  @supabase.js  @swc.js  class-variance-authority.js  clsx.js  framer-motion.js  jose.js  lucide-react.js  motion-dom.js  motion-utils.js  next.js  react-hook-form.js  set-cookie-parser.js  tailwind-merge.js  (+5 more)
app/: globals.css  layout.tsx  page.tsx
app/auth/: layout.tsx  page.tsx
backend/: app.py  requirements.txt
components/: auth-form.tsx  classes-preview.tsx  contact-form.tsx  features-section.tsx  footer.tsx  hero-section.tsx  hero.tsx  logo.tsx  navbar.tsx
components/ui/: badge.tsx  button.tsx  card.tsx
lib/: auth.ts  supabase.ts  utils.ts
lib/supabase/: activities.ts  auth.ts  classes.ts  client.ts  forum.ts  storage.ts  types.ts
server/: Cargo.toml
server/handlers/: auth.rs  courses.rs  users.rs
server/src/: auth.rs  db.rs  error.rs  main.rs  models.rs
src/: App.css  App.tsx  index.css
src/components/: ContactForm.tsx  Footer.tsx  Hero.tsx  Logo.tsx  Navbar.tsx
src/lib/: supabase.ts
src/store/: authStore.ts
src/types/: index.ts  supabase.ts
types/: index.ts  supabase.ts
(+212 files in other folders)
